front-gateway/src/components/Search/style/filter.scss
.filter-component-wrapper {
  background-color: $gray-lighter;

  @media (max-width: $screen-sm-max) {
    padding-bottom: 10px;
  }
}

.filter-toggle-container {
  position: fixed;
  text-align: center;
  top: 72px;
  width: 100%;
  z-index: 1;

  button {
    box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.15);
    height: 40px;
    width: 260px;

    &::after {
      content: '\f0b0';
      font-family: FontAwesome;
      margin-right: 5px;
    }
  }

  @media (min-width: $screen-sm-min) {
    display: none;
  }
}

.filter-wrapper {
  background-color: $brand-white;
  padding: 65px 0 0;

  @media (max-width: $screen-sm-max) {
    @include box-shadow(0 2px 10px 0 rgba(0, 0, 0, 0.2));
  }

  @media (max-width: $screen-xs-max) {
    &.hide-mobile-filter {
      display: none;
    }
  }

  @media (min-width: $screen-sm-min) {
    margin: 0 auto;
    width: 480px;
  }

  @media (min-width: $screen-md-min) {
    margin: 0;
    padding: 39px 0;
    width: 361px;
  }
}

.filter-close {
  text-align: center;

  .filter-close-text {
    color: #00f;
    cursor: pointer;
    display: inline-block;
    padding: 15px;
    text-decoration: underline;
  }

  @media (min-width: $screen-sm-min) {
    display: none;
  }
}

.filter-city-container {
  text-align: center;

  .filter-city-dropdown {
    height: 62px;
    width: 285px;
  }
}

.filter-group-container {
  border-bottom: 1px solid $gray-lighter;
  font-size: 15px;
  line-height: $line-height-computed;
  padding: 22px 22px 26px;
}

.filter-admin-switch {
  display: inline-block;

  &:nth-child(even) {
    width: 158px;
  }

  @media (max-width: $screen-sm-max) {
    width: 158px;
  }
}

.filter-switch-group-header {
  margin-bottom: 3px;

  .like-filter-icon {
    color: #ea441a;
    margin-left: 5px;
  }
}

.filter-input-wrapper {
  display: inline-block;
  font-size: 13px;
  width: 50%;
}

.filter-sliders-container {
  border-bottom: 1px solid $gray-lighter;
  font-size: 13px;
  line-height: $line-height-computed;
  padding: 24px 46px 0;
}

.filter-amenities-container {
  font-size: 13px;
  line-height: $line-height-computed;
  margin-right: 0 !important;
  padding-right: 7px;
  padding-top: 10px;

  .checkbox {
    padding-bottom: 15px;
  }

  > [class*='col-'] {
    padding-left: 0;
    padding-right: 0;
  }
}

.size-slider {
  position: relative;
}

// i {
//   background-color: $brand-primary;
//   border-radius: 50%;
//   color: $brand-white;
//   cursor: pointer;
//   display: none; // TODO: Implement modal (and restore display block).
//   font-family: 'georgia';
//   height: 16px;
//   left: -30px;
//   line-height: 14px;
//   position: absolute;
//   text-align: center;
//   top: 59px;
//   width: 14px;
//   z-index: 9;
// }

// nouislider overrides
.cost-slider {
  .noUi-connect {
    background-color: $brand-primary;
  }

  .noUi-value-large {
    font-size: 15px;

    &::before {
      color: $gray-light;
      content: "₪";
      font-size: 12px;
    }

    &:last-child::after {
      color: $brand-success;
      content: "+";
    }
  }
}

.roomsnum-slider {
  .noUi-connect {
    background-color: lighten($brand-primary, 20%);
  }

  .noUi-value-large {
    font-size: 16px;

    &:last-child::after {
      color: $brand-success;
      content: "+";
    }
  }
}

.size-slider {
  .noUi-connect {
    background-color: lighten($brand-primary, 40%);
  }

  .noUi-value-large {
    font-size: 12px;

    &:last-child {
      font-size: 16px;

      &::after {
        color: $brand-success;
        content: "+";
      }
    }

    &:nth-child(2)::after {
      color: $gray-light;
      font-size: 12px;
    }
  }
}

.noUi-target * {
  direction: ltr;
}

.noUi-marker {
  width: 1px !important;
}

.noUi-handle {
  background-color: $brand-white !important;
  border: 1px solid lighten($gray-light, 30%) !important;
  border-radius: 50% !important;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) !important;
  cursor: pointer !important;
  height: 19.6px !important;
  left: -10px !important;
  top: -9px !important;
  width: 19.6px !important;

  &:hover {
    cursor: hand !important;
  }

  &::before,
  &::after {
    display: none !important;
  }
}

.noUi-connect {
  height: 4px;
  width: auto;
}

.noUi-origin.noUi-background {
  background-color: $brand-white;
  box-shadow: inset 0 1px 1px #F0F0F0, 0 3px 6px -5px #BBB;
  height: 4px;
  right: 0;
  width: auto;
}

.noUi-value-sub {
  font-size: 12px;
}

.noUi-value-large {
  color: $brand-primary;
  padding-top: 5px;
}

.cost-slider,
.roomsnum-slider,
.size-slider {
  > div {
    height: 4px;
    margin-bottom: 80px;
  }

  * {
    /*CSS transitions*/
    -o-transition-property: none !important;
    -moz-transition-property: none !important;
    -ms-transition-property: none !important;
    -webkit-transition-property: none !important;
    transition-property: none !important;
    /*CSS transforms*/
    -o-transform: none !important;
    -moz-transform: none !important;
    -ms-transform: none !important;
    -webkit-transform: none !important;
    transform: none !important;
    /*CSS animations*/
    -webkit-animation: none !important;
    -moz-animation: none !important;
    -o-animation: none !important;
    -ms-animation: none !important;
    animation: none !important;
  }
}

